Develop (#42)
* Changed Roles to uppercamelcase

Give access to staff for accessing groups endpoint

* Rechanged group flows and included validations

* Added isActive and edit member type in group

* Changed Roles to uppercamelcase Give access to staff for accessing groups endpoint  Rechanged group flows and included validations    Fixed all bugs and added username in timesheet response

* review changes

* Timesheet Response Privilege based

* Timesheet active user based response

* Parent flow for create and edit User

* Fix Heroku deployment: added Procfile and updated configuration

* Fix Heroku deployment: added requestMatcher and updated configuration

* Fix Heroku deployment: update requestMatcher and updated configuration

* Fix Heroku deployment: update corsOrigin configuration

* Fix Heroku deployment: Angular Build

* Bug Fix

* Demo Testing - bug fix

* property fix

* Fixed property file

* Feature bug fix (#11)

* password fix

* Property file fix

* Password fix

* Fix Heroku deployment: Angular Build with Bug Fixing

* Fix Heroku deployment: Properperties changes

* Fix Heroku deployment: Properties changes connection limit

* Fix Heroku deployment: Properties changes connection limit adding

* Fix Heroku deployment: Build Error Fix

* Fix Heroku deployment: Build Error Fix for timeout issues

* Fix Heroku deployment: Increase the connection error

* Fix Heroku deployment: Removed

* Fix Heroku deployment : Build Update

* Fix Heroku deployment : Auth Fix

* Fix Heroku deployment : set logger and application properties

* Fix Heroku deployment : ipAddress

* Fix Heroku deployment : ipAddress

* create user with groupId and Profile Api

* Timesheet CSV download method

* Fix Heroku deployment : Report update

* Fix Heroku deployment : DB Config Update

* Fix Heroku deployment : Angular TimesheetReport update

* Fixed Timesheet Report bug list

* Fixed cron logic scheduling for auto clockout

* Heroku Privacy policy update

* Heroku Privacy policy Ang